--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,7 +1,9 @@
 name: Metrics
 on:
-  schedule: [{cron: "0 0 * * *"}]
   workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *"
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -10,18 +12,13 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.SUMMARY_GITHUB_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: languages.svg
           user: Abimael10
-          template: classic
-          base: header, activity, community, repositories, metadata
-          config_timezone: America/New_York
+          base: ""
           plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
+          plugin_languages_limit: 20
           plugin_languages_sections: most-used
+          plugin_languages_colors: github
           plugin_languages_threshold: 0%
+          plugin_languages_details: percentage
