--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,24 +1,19 @@
 name: Metrics
 on:
+  # Schedule daily updates
+  schedule: [{cron: "0 0 * * *"}]
+  # (optional) Run workflow manually
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * *"
-
+  # (optional) Run workflow when pushing on master/main
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
+    environment: 
+      name: secrets
     permissions:
       contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: languages.svg
-          user: Abimael10
-          base: ""
-          plugin_languages: yes
-          plugin_languages_limit: 20
-          plugin_languages_sections: most-used
-          plugin_languages_colors: github
-          plugin_languages_threshold: 0%
-          plugin_languages_details: percentage
